# nuscr

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mailmap  .ocamlformat  CHANGES.md  Dockerfile  Makefile  Readme.md  changes.txt  dune-project  index.html  issues.txt  live.bc.runtime.js  nuscr-web.opam  nuscr.opam  style.css  test.smt
.circleci/: config.yml
.github/workflows/: changelog.yml  docker.yml  main.yml  web-deploy.yml
.mergify/: config.yml
dev/: index.html  live.bc.js  style.css
dev/docs/: index.html
dev/docs/nuscr/: index.html
dev/docs/nuscr-web/: index.html
dev/docs/nuscr/Nuscrlib/: index.html
dev/docs/odoc.support/: highlight.pack.js  katex.min.css  katex.min.js  odoc.css
docs/: index.html
docs/nuscr/: index.html
docs/nuscr-web/: index.html
docs/nuscr/Nuscrlib/: index.html
docs/nuscr/Nuscrlib/Efsm/: index.html
docs/nuscr/Nuscrlib/Err/: index.html
docs/nuscr/Nuscrlib/Expr/: index.html
docs/nuscr/Nuscrlib/Gtype/: index.html
docs/nuscr/Nuscrlib/LiteratureSyntax/: index.html
docs/nuscr/Nuscrlib/Loc/: index.html
docs/nuscr/Nuscrlib/Ltype/: index.html
docs/nuscr/Nuscrlib/Names/: index.html
docs/nuscr/Nuscrlib/Ocamlcodegen/: index.html
docs/nuscr/Nuscrlib/Pragma/: index.html
docs/nuscr/Nuscrlib__Gtype/: index.html
docs/nuscr/Nuscrlib__Ocamlcodegen/: index.html
examples/: ChoiceRec.nuscr  ChoiceRec.scr  NOTICE  NestChoice.scr
examples/TODO/: SameRecVar.nuscr
examples/TODO/errors/: MergeRec.nuscr  SameRecVar.scr
examples/annot/: Adder.nuscr  Adder.scr  AnotherHttp.nuscr  AnotherHttp.scr  Fib.nuscr  Fib.scr  FibnoAss.nuscr  FibnoAss.scr  Http.nuscr  Http.scr  LoanApplication.scr  Mcrsrv.nuscr  Mcrsrv.scr  Nego1.nuscr  Nego1.scr  SH.nuscr  SH.scr  SHHello.nuscr  SHHello.scr  SHNew.nuscr  SHNew.scr  Smtp.nuscr  Smtp.scr  ThreeBuyer.nuscr  ThreeBuyer.scr  Travel.nuscr  Travel.scr  TwoBuyer.nuscr  TwoBuyer.scr  http.scr  test100.nuscr  test100.scr  test100NoAss.nuscr  test100NoAss.scr
examples/consensus/: Clock.nuscr  Clock.scr  ClockAnnot.nuscr  ClockAnnot.scr  ClockAnnotRec.nuscr  ClockAnnotRec.scr  ClockAnnotRecTR.nuscr  ClockAnnotRecTR.scr  ClockAnnotTR.scr  ClockTR.scr
examples/crashbranch/: SimpleBroadcast.nuscr  SimpleBroadcast2.nuscr  SimpleConsensus.nuscr  SimpleConsensus2.nuscr  SimpleConsensus3.nuscr  SimpleConsensus3R.nuscr  Test1.nuscr  TestThree.nuscr  TestTwo.nuscr
examples/errors/: ClockAnnotTR.nuscr  ClockTR.nuscr  MissingParticipant.scr  NonTailRecursive.scr  Scratch1.nuscr  unboundrec.scr
examples/from-scribble-java/demo/supplierinfo/: SupplierInfoBasic.nuscr  SupplierInfoBasic.scr  SupplierInfoDemo.nuscr  SupplierInfoExper.nuscr  SupplierInfoExplicit.scr  SupplierInfoNoFair.scr  SupplierInfoOrig.nuscr  SupplierInfoOrig.scr  SupplierInfoSubprot.nuscr  SupplierInfoSubprot.scr
examples/from-scribble-java/exercise/calculator/: EProtocol.nuscr  (+1 more)
examples/from-scribble-java/tmp/: Betty.nuscr  Demo.nuscr  Demo.scr  ExpConn.scr  Fixme.nuscr  Fixme.scr  Quirk.scr  Test.scr  Test2.scr
examples/nested-protocols/codegen/: NestedExample.nuscr  NestedExample2.nuscr  NestedExample3.nuscr
examples/nested-protocols/gtypes/: MultipleRenamingConflicts.scr  NestedPrefixes.nuscr  NestedPrefixes.scr  NoConflicts.nuscr  NoConflicts.scr  RenameTopLevelNested.nuscr  RenameTopLevelNested.scr  SamePrefixConflict.scr  ShadowingDefinitions.nuscr  ShadowingDefinitions.scr
examples/par/: par.nuscr
examples/parser/: GMessage.nuscr  GMessage.scr  GProtocol.nuscr  GProtocol.scr  first.nuscr  first.scr
examples/parser/pragma/: calc.nuscr  calc.scr
examples/refinements/: Counter.nuscr  Test1.nuscr  Test1.scr
lib/: codegen.ml  codegen.mli  codegenstate.ml  codegenstate.mli  config.ml  config.mli  dune  efsm.ml  efsm.mli  err.ml  expr.ml  fstarcodegen.ml  fstarcodegen.mli  fsutil.ml  gocodegen.ml  gocodegen.mli  goenvs.ml  goenvs.mli  goimpl.ml  gonames.ml  gtype.ml  gtype.mli  lexer.mll  lib.ml  lib.mli  loc.ml  loc.mli  ltype.ml  ltype.mli  name.ml  name.mli  namegen.ml  namegen.mli  names.ml  names.mli  normal_form.ml  nuscrlib.ml  nuscrlib.mli  ocamlcodegen.ml  ocamlcodegen.mli  (+10 more)
lib/codegen/: codegen.ml  dune
lib/codegen/fstar/: dune  fstarcodegen.ml  fstarcodegen.mli
lib/codegen/go/: dune  gocodegen.ml  gocodegen.mli  goenvs.ml  goenvs.mli  goimpl.ml  goimpl.mli  gonames.ml  gonames.mli
lib/codegen/ocaml/: dune  ocamlcodegen.ml  ocamlcodegen.mli
lib/mpst/: dune  efsm.ml  efsm.mli  expr.ml  expr.mli  extraction.ml  extraction.mli  gtype.ml  gtype.mli  literatureSyntax.ml  literatureSyntax.mli  ltype.ml  ltype.mli  message.ml  message.mli  protocol.ml
lib/protobuf/: convert.ml  convert.mli  dune  globaltype.proto  localtype.proto  protobufConvert.ml  protobufConvert.mli
lib/syntaxtree/: dune  lexer.ml  lexer.mli  lexer.mll  parser.mly  symtable.ml  symtable.mli  syntax.ml  syntax.mli
lib/utils/: byrefpair.ml  dune  err.ml  err.mli  fsutil.ml  fsutil.mli  loc.ml  loc.mli  name.ml  name.mli  namegen.ml  namegen.mli  names.ml  names.mli  pairset.ml  pairset.mli  pragma.ml  pragma.mli  solver.ml  solver.mli
resources/: NOTICE  Scribble.g
snippets/Adder/: Adder.ml  Adder.scr  C.ml  S.ml  dune
snippets/AdderMonadic/: AdderMonadic.ml  C.ml  S.ml  dune
test/: dune  test.expected  test.ml  test_gtype.ml
test/cram-tests/: dune
test/cram-tests/ambiguous-choice.t/: run.t
test/cram-tests/codegen.t/: Adder.ml  dune  run.t
test/cram-tests/invalid-pragma.t/: Invalid.nuscr  run.t
test/cram-tests/merge-recursion.t/: Loop3.nuscr  run.t
test/cram-tests/ocaml-codegen.t/: run.t
test/cram-tests/ocaml-monadic-codegen.t/: AdderMonadic.ml  run.t
test/cram-tests/reflexive-message.t/: run.t
test/cram-tests/unbound-recursion-name.t/: run.t
test/cram-tests/unbound-role-name.t/: run.t
test/cram-tests/unmergable-choice.t/: run.t
utils/: authors.sh  fmt.sh  install-z3.sh  pre-commit  serve-web.sh  update-ocamlformat.sh
web/: .gitignore  Makefile  README.md  dune  examplelist.txt  examples.ml  genex.sh  genex_dune.sh  index.html  interface.ml  live.ml  minify_all.sh  package.json  style.css  webutils.ml
(+229 files in other folders)
