opam-version: "2.0"
version: "1.0"
maintainer: "Francisco Ferreira <email.here>"
authors: ["Francisco Ferreira"]
homepage: "https://gitlab.com/MustardWatch/nuscr"
bug-reports: "https://gitlab.com/MustardWatch/nuscr/issues"
dev-repo: "git+https://gitlab.com/MustardWatch/nuscr.git"
license: "GPL"
synopsis: "New Scribble"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "menhir" {build}
  "ppx_deriving"
  "dune" {build}
  "ocamlformat" {build}
  "core_kernel"
]
