opam-version: "2.0"
version: "1.0"
maintainer: "Francisco Ferreira <email.here>"
authors: ["Francisco Ferreira" "Fangyi Zhou"]
homepage: "https://github.com/nuscr/nuscr"
bug-reports: "https://github.com/nuscr/nuscr/issues"
dev-repo: "git+https://github.com/nuscr/nuscr.git"
license: "GPL"
synopsis: "A tool to manipulate and validate Scribble-style multiparty protocols"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "menhir" {build}
  "ppx_deriving"
  "dune" {build}
  "ocamlformat" {build & >= "0.12"}
  "core_kernel"
  "ppx_inline_test" {dev}
]
