(rule
 (targets examples.ml)
 (action
  (run ./genex_dune.sh))
 (deps
  (file ../test/cram-tests/refinements/state-var-contract.t/Contract.nuscr)
  (source_tree ../examples)
  (file examplelist.txt)))

(executable
 (name live)
 (modules examples interface webutils live)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries nuscr.lib js_of_ocaml-tyxml js_of_ocaml))
